2004-04-08  Not Zed  <NotZed@Ximian.com>

	* e-info-label.[ch]: A widget to show component info for the
	current component/view.

2004-04-07  Jeffrey Stedfast  <fejj@ximian.com>

	* e-multi-config-dialog.c: Updated for changes to e-config-page.c
	(init): Removed the OK and Apply buttons.

	* e-config-page.c (e_config_page_apply): Removed.
	(e_config_page_is_applied): Removed.
	(e_config_page_changed): Removed.

2004-04-01  Dan Winship  <danw@ximian.com>

	* e-url-entry.c (init): Make the button initially insensitive.
	Connect to the entry's "changed" signal.
	(entry_changed_cb): sensitize the button iff the entry is
	non-empty
	(button_clicked_cb): simplify a bit by using gtk_entry_get_text
	rather than gtk_editable_get_chars.

2004-04-01  Jeffrey Stedfast  <fejj@ximian.com>

	* e-charset-picker.c (e_charset_picker_new): Create a new class
	for "Western European, New" to fix a translation issue.

2004-03-31  Not Zed  <NotZed@Ximian.com>

	* e-filter-bar.c (menubar_activated): start the rule editor with
	the right label.

2004-03-26  Rodney Dawes  <dobey@ximian.com>

	* e-multi-config-dialog.c (init): Remove the dialog separator
	Set the border widths of the dialog's vbox and action area to be more
	HIG-compliant
	Set the border width of the dialog's child to 12 for HIG-compliance

2004-03-15  JP Rosevear  <jpr@ximian.com>

	* e-calendar-item.c (e_calendar_item_class_init): change arg name
	(e_calendar_item_init): ditto
	(e_calendar_item_get_arg): ditto
	(e_calendar_item_set_arg): ditto
	(e_calendar_item_preserve_day_selection): set the selection day to
	the given selection
	(e_calendar_item_set_first_month): use above to preserve selected
	day of week

	* e-calendar-item.h: change field name

2004-03-13  Trent Lloyd  <lathiat@sixlabs.org>

	* e-search-bar.c (remove_bonobo_menus): move function above
	setup_bonobo_menus, fixes implicit declaration.

2004-03-12  Kidd Wang  <kidd.wang@sun.com>

	* e-dateedit.c (create_children): enlarge the text box to